plugins {
    // Apply the java-library plugin for API and implementation separation.
    id 'java-library'
    id 'maven-publish'
}

sourceCompatibility = 8
targetCompatibility = 8

group = 'gs.mclo.java'
version = '2.0.0'

repositories {
    // Use JCenter for resolving dependencies.
    jcenter()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'

    implementation 'com.google.code.gson:gson:2.8.6'
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

jar {
    from sourceSets.main.allSource
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

publishing {
    publications {
        MclogsMinecraftIntegration(MavenPublication) {
            from components.java
        }
    }

    repositories {
        mavenLocal()
    }
}